--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       <section id="hero">
-        <h1>Welcome to my website</h1>
+        <h1>Welcome to my website Aaradhya </h1>
         <p>Here you can find information about my business and services.</p>
         <a href="#" class="cta-btn">Learn More</a>
       </section>
