--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@300&family=Space+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
-        <img src="profile.jpg" id="prof" alt="Image of Jay Shankarpure">
+        <img src="assets/profile.jpg" id="prof" alt="Image of Jay Shankarpure">
         
         <h1>Jay Shankarpure</h1>
         
