--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
         </div>
         </div>
         
+        <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="jayshankarq" data-description="Support me on Buy me a coffee!" data-message="Thanks for visiting . You can buy me a coffee" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
         <script src="index.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> 
