--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@300&family=Space+Mono&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="assets/profile.jpg">
     </head>
     <body>
         <img src="assets/profile.jpg" id="prof" alt="Image of Jay Shankarpure">
