Added Cal.com Integration

--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
             <a href="https://github.com/Arthavruksha" target="_blank">
             <ion-icon name="logo-github"></ion-icon>
             </a>
+	    <a href="https://cal.com/jay-shankarpure" target="_blank">
+		    <ion-icon name="calendar"></ion-icon>
+		</a>
         </div>
         </div>
         
