+ redirection for jayshankarpure.me/meet to cal.com/jay-shankarpure

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://jays.framer.ai/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+        // Redirect only if the current URL is "https://jayshankarpure.me/meet"
+        if (window.location.href === "https://jayshankarpure.me/meet") {
+            window.location.href = "https://cal.com/jay-shankarpure";
+        }
+    </script>
+    <meta http-equiv="refresh" content="0;url=https://jays.framer.ai/">
+    <title>Redirecting...</title>
 </head>
 <body>
-  <!-- You can add a message here for users with JavaScript disabled -->
-  <p>If you are not redirected, <a href="https://jays.framer.ai/">click here</a>.</p>
+    <!-- You can add a message here for users with JavaScript disabled -->
+    <p>If you are not redirected, <a href="https://jays.framer.ai/">click here</a>.</p>
 </body>
 </html>
